src/tests/resources/transcripts/errors/parser/invalid_function_signature.sif
function {}
end function
(-- error
invalid function signature
--)